gallery/public/gallery-static/css/style.css
/*
Design by Free CSS Templates
http://www.freecsstemplates.org
Released for free under a Creative Commons Attribution 2.5 License
*/

body {
	margin: 0;
	padding: 0;
	background: #1A1A1A;
	font-family: Verdana, Helvetica, sans-serif;
/*	font-family: Georgia, "Times New Roman", Times, serif; */
	font-size: 12px;
	color: #A7A7A7;
	text-align: center;
}

h1, h2, h3 {
	margin: 0;
	padding: 0;
	font-weight: normal;
	color: ##878787;
}

h1 {
	font-size: 2em;
}

h2 {
	font-size: 2.4em;
}

h3 {
	font-size: 1.6em;
}

p, ul, ol {
	margin-top: 0;
}

ul, ol {
}

a {
	text-decoration: underline;
	color: #CCC;
}

a:hover {
	text-decoration: underline;
	color: #F54;
}

a img {
	border:0;
}


.overlay {
	background-color: #000;
	opacity: .7;
	filter: alpha(opacity=70);
	position: absolute; top: 0; left: 0;
	width: 100%; height: 100%;
	z-index: 10;
}

/* HEADER */

#header {
	margin: 0px 0px 10px 0px;
/*	background: url(/gallery-static/i/x2.gif) repeat left top; */
	font-family: Georgia, "Times New Roman", Times, serif;
}

/* Menu */

#menu {
	width: 100%;
	height: 60px;
	font-size: 14px;
	border-bottom: 1px solid #333;
}

#menu #logo a, #menu #logo a:hover {
	text-decoration: none;
	letter-spacing: -1px;
	font-size: 1.8em;
	font-weight: normal;
	color: #999;
}

#menu #logo p {
	margin: 0;
	padding: 0px 0 0 160px;
	font: normal 14px Georgia, "Times New Roman", Times, serif;
	font-style: italic;
	color: #FFFFFF;
} 


#menu td#logo {
	width: 300;
	min-width: 300px;
	padding-top: 5px;
}

#menu td#search {
	width: 20%;
}

#menu td {
	width: 10%;
/*	background: #000; */
	text-align: center;
	padding-top: 20px;
}

.pager {
	float: right;
	margin-right: 10px;
	margin-top: 0px;
	font-size: 14px;
}

.pager_link {
	font-weight: bold;
}

/* ALBUMS page */

.gallery-thumbs {
	padding-top: 20px;
	text-align: center;
	margin-bottom: 15px;
}

.gallery-thumbs2 {
	display: inline-block;
	max-width: 700px;
}

#album-photos-menu {
	display: block;
	text-align: left;
	margin-bottom: 5px;
}

.gallery-thumbs img {
	margin: 4px;
	border: 1px solid #333;
}

.gallery-albums {
	margin-top: 30px;
	text-align: center;
}

.gallery-albums2 {
	display: inline-block;
	max-width: 1000px;
}

.gallery-album {
	display: inline-block;
	text-align: left;
	vertical-align: top;
	min-width: 400px;
	width: 45%;
	min-height: 150px;
	padding: 10px;
}

.gallery-album img {
	float: left;
	margin-right: 20px;
	border: 0;
}

.album-link {
	font-size: 14px;
	border: 0;
}

.meta {
	font-weight: bold;;
}

/* PHOTO page */

#photo-header {
	text-align: center;
	padding: 0;
	margin: 0;
	font-size: 18px;
	font-weight: bold;
	position: absolute;
	left:0;
	width: 99%;
	min-width: 600px;
	bottom: 1px;
}

#photo-header a {
	color: #B7B7B7;
}

#photo-counter {
	position: absolute;
	padding: 5px;
	bottom: 1px;
	z-index: 12;
}

#photo-copyright {
	float: right;
	font-weight: normal;
	font-size: 12px;
}

#photo-menu {
	display: inline-block;
	padding-top: 3px;
	position: absolute;
	background: #999;
	min-width: 330px;
	z-index: 12;
	opacity: 0.5;
	bottom: 0px;
}

#photo-menu div {
	display: inline-block;
	width: 80px;
}

#photo-menu a {
	display: block;
}

#photo-show-all {
	margin: 5px 0px 0px 10px;
	display: inline-block;
}

#photo-close {
	padding: 5px;
	position: absolute;
	z-index: 12;
	top: 0px;
	right: 0px;
}

#mainphoto {
	border: 50px solid #EEE;
	position: absolute;
	z-index: 11;
}

/* Page */

#page {
	padding: 0;
}

#allpage {
	display: inline-block;
	width: 1000px;
	padding: 0;
	text-align: left;
}

#footer {
	font-size: 8pt;	
	margin-top: 30px;
	padding: 20px 70px 20px 20px;
	text-align: right;
	border-top: 1px solid #333;
}

